crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__markup_fragment_unclosed.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: let value = <>hi
---
alder::syntax

  × I was expecting `</>` to close this fragment at the end of the file
   ╭─[/project/src/main.ald:1:17]
 1 │ let value = <>hi
   ·             ┬
   ·             ╰── this fragment starts here
   ╰────
