crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__markup_hole_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = <p>{x y}</p>"
---
alder::syntax

  × I was expecting `}` after this markup expression
   ╭─[/project/src/main.ald:1:19]
 1 │ let value = <p>{x y}</p>
   ·                ┬  ┬
   ·                │  ╰── expected `}`
   ·                ╰── this `{` opens here
   ╰────
