crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__markup_if_body.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = <p>@if x }</p>"
---
alder::syntax

  × I was expecting `{` to start this markup child block
   ╭─[/project/src/main.ald:1:22]
 1 │ let value = <p>@if x }</p>
   ·                ┬     ┬
   ·                │     ╰── expected `{`
   ·                ╰── this `@if` starts here
   ╰────
