crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__markup_match_block.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = <p>@match x { A => { {)} } }</p>"
---
alder::syntax

  × I was expecting an expression inside this markup interpolation
   ╭─[/project/src/main.ald:1:35]
 1 │ let value = <p>@match x { A => { {)} } }</p>
   ·                ┬                  ┬
   ·                │                  ╰── expected an expression
   ·                ╰── this `@match` starts here
   ╰────
