crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__markup_match_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = <p>@match x { A => <b>a</b> ) }</p>"
---
alder::syntax

  × I was expecting another markup match arm or `}`
   ╭─[/project/src/main.ald:1:41]
 1 │ let value = <p>@match x { A => <b>a</b> ) }</p>
   ·                         ┬               ┬
   ·                         │               ╰── expected `,`, a pattern, or `}`
   ·                         ╰── this `{` opens here
   ╰────
